<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.lmu.ifi.dbs.medmon</groupId>
	<artifactId>Medmon</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho.version>0.15.0</tycho.version>
		<scala.version>2.9.2</scala.version>
		<wagon.version>1.0-beta-6</wagon.version>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<encoding>UTF-8</encoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>
		<dependency>
			<groupId>org.scalatest</groupId>
			<artifactId>scalatest_2.9.2</artifactId>
			<version>1.8</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<modules>
		<module>de.lmu.ifi.dbs.medmon.base.ui</module>
		<module>de.lmu.ifi.dbs.medmon.derby</module>
		<module>de.lmu.ifi.dbs.medmon.medic.core</module>
		<module>de.lmu.ifi.dbs.medmon.medic.logging</module>
		<module>de.lmu.ifi.dbs.medmon.medic.reporting</module>
		<module>de.lmu.ifi.dbs.medmon.medic.ui</module>
		<module>de.lmu.ifi.dbs.medmon.patient.ui</module>
		<module>de.lmu.ifi.dbs.medmon.services</module>

		<module>de.lmu.ifi.dbs.medmon.medic.core.feature</module>
		<module>de.lmu.ifi.dbs.medmon.common.ui.feature</module>
		<module>de.lmu.ifi.dbs.medmon.medic.feature</module>

		<module>de.lmu.ifi.dbs.medmon.sensor.core</module>
		<module>de.lmu.ifi.dbs.medmon.sensor.test</module>
		<module>de.lmu.ifi.dbs.medmon.sensor.feature</module>
		<module>de.lmu.ifi.dbs.medmon.medic.reporting.feature</module>

		<module>de.sendsor.accelerationSensor</module>
		<module>de.sendsor.accelerationSensor.feature</module>

		<module>de.lmu.ifi.dbs.medmon.site</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
				<version>2.15.0</version>
				<executions>
					<execution>
						<id>compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<phase>compile</phase>
					</execution>

					<execution>
						<id>test-compile</id>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<phase>test-compile</phase>
					</execution>

					<execution>
						<phase>process-resources</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<excludeResources>
						<excludeResource>**/*.scala</excludeResource>
						<excludeResource>**/*.gitignore</excludeResource>
					</excludeResources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=256M</argLine>
					<includes>
						<include>**/*Test.*</include>
					</includes>
					<dependencies>
						<dependency>
							<type>p2-installable-unit</type>
							<artifactId>org.eclipse.equinox.ds</artifactId>
						</dependency>
					</dependencies>
				</configuration>
				<!--
				<executions>
					<execution>
						<id>medmon-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
				-->
			</plugin>

			<!-- Materialize Products -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-director-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>materialize-products</id>
						<goals>
							<goal>materialize-products</goal>
						</goals>
					</execution>
					<execution>
						<id>archive-products</id>
						<goals>
							<goal>archive-products</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<!-- Eclipse repositories -->
		<repository>
			<id>eclipse-indigo</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/indigo</url>
		</repository>
		<repository>
			<id>eclipse-sapphire</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/sapphire/0.5.1/repository</url>
		</repository>
		<repository>
			<id>eclipse-scala-ide</id>
			<layout>p2</layout>
			<url>http://download.scala-ide.org/releases-29/milestone/site</url>
		</repository>
		<repository>
			<id>eclipse-gemini-dbaccess</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/gemini/dbaccess/updates/1.0</url>
		</repository>
		<repository>
			<id>eclipse-nebula</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/technology/nebula/snapshot</url>
		</repository>
		<repository>
			<id>eclipse-nebula-incubation</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/technology/nebula/incubation/snapshot</url>
		</repository>
		<repository>
			<id>logback</id>
			<layout>p2</layout>
			<url>http://logback.qos.ch/p2</url>
		</repository>

		<!-- Custom repositories -->
		<repository>
			<id>dependency-repository</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/dependencies</url>
		</repository>
		<repository>
			<id>knowing-repository</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/knowing/snapshot</url>
		</repository>
		<repository>
			<id>jama-repository</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/jama/1.0.2</url>
		</repository>
		<repository>
			<id>joda-repository</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/joda</url>
		</repository>
		<repository>
			<id>jfreechart</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/jfreechart</url>
		</repository>


		<!-- Scala repositories -->
		<repository>
			<id>scala-tools.org</id>
			<name>Scala-tools Maven2 Repository</name>
			<url>http://scala-tools.org/repo-releases</url>
		</repository>
		<repository>
			<id>typesafe</id>
			<name>Typesafe Repository</name>
			<url>http://repo.typesafe.com/typesafe/releases/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>scala-tools.org</id>
			<name>Scala-tools Maven2 Repository</name>
			<url>http://scala-tools.org/repo-releases</url>
		</pluginRepository>
		<pluginRepository>
			<id>tycho-snapshots</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</pluginRepository>
	</pluginRepositories>
</project>


